--- a/src/main/webapp/i18n/sr/global.json
+++ b/src/main/webapp/i18n/sr/global.json
@@ -1,15 +1,15 @@
 {
   "global": {
-    "title": "Tender",
+    "title": "Tenderi",
     "browsehappy": "Koristite <strong>zastareli</strong> pretraživač. Molimo vas <a href=\"http://browsehappy.com/?locale=en\">nadogradite pretraživač</a> kako biste poboljšali Vaše iskustvo.",
     "menu": {
       "home": "Početna stranica",
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "Entiteti",
-        "ponudjaci": "Ponudjaci",
-        "hvalePonude": "Hvale Ponude",
         "ponude": "Ponude",
+        "hvalePonude": "Hvale Ponude",
+        "ponudjaci": "Ponudjaci",
         "postupci": "Postupci",
         "viewPonude": "View Ponude",
         "specifikacije": "Specifikacije",
@@ -18,7 +18,6 @@
         "prvorangirani": "Prvorangirani",
         "viewVrednovanje": "View Vrednovanje",
         "viewPrvorangirani": "View Prvorangirani",
-        "viewPonudjaci": "View Ponudjaci",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
