--- a/src/main/webapp/i18n/sr/hvalePonude.json
+++ b/src/main/webapp/i18n/sr/hvalePonude.json
@@ -2,9 +2,9 @@
   "tenderApp": {
     "hvalePonude": {
       "home": {
-        "title": "Hvale Ponudes",
+        "title": "Hvale Ponude",
         "refreshListLabel": "Refresh list",
-        "notFound": "No Hvale Ponudes found"
+        "notFound": "Nema zapisa"
       },
       "detail": {
         "title": "Hvale Ponude"
