--- a/src/main/webapp/i18n/sr/ponudjaci.json
+++ b/src/main/webapp/i18n/sr/ponudjaci.json
@@ -2,7 +2,7 @@
   "tenderApp": {
     "ponudjaci": {
       "home": {
-        "title": "Ponudjacis",
+        "title": "Ponudjaci",
         "refreshListLabel": "Refresh list",
         "createLabel": "Kreiraj novi Ponudjaci",
         "createOrEditLabel": "Kreirajte ili izmenite Ponudjaci",
