--- a/src/main/webapp/i18n/sr/postupci.json
+++ b/src/main/webapp/i18n/sr/postupci.json
@@ -2,7 +2,7 @@
   "tenderApp": {
     "postupci": {
       "home": {
-        "title": "Postupcis",
+        "title": "Postupci",
         "refreshListLabel": "Refresh list",
         "createLabel": "Kreiraj novi Postupci",
         "createOrEditLabel": "Kreirajte ili izmenite Postupci",
