--- a/src/main/webapp/i18n/sr/tenderiHome.json
+++ b/src/main/webapp/i18n/sr/tenderiHome.json
@@ -2,7 +2,7 @@
   "tenderApp": {
     "tenderiHome": {
       "home": {
-        "title": "Tenderi Homes",
+        "title": "Tenderi",
         "refreshListLabel": "Refresh list",
         "notFound": "No Tenderi Homes found"
       },
