--- a/src/main/webapp/i18n/sr/viewPonude.json
+++ b/src/main/webapp/i18n/sr/viewPonude.json
@@ -2,7 +2,7 @@
   "tenderApp": {
     "viewPonude": {
       "home": {
-        "title": "View Ponudes",
+        "title": "Ponude",
         "refreshListLabel": "Refresh list",
         "createLabel": "Kreiraj novi View Ponude",
         "createOrEditLabel": "Kreirajte ili izmenite View Ponude",
