--- a/src/main/webapp/i18n/sr/vrednovanje.json
+++ b/src/main/webapp/i18n/sr/vrednovanje.json
@@ -2,9 +2,9 @@
   "tenderApp": {
     "vrednovanje": {
       "home": {
-        "title": "Vrednovanjes",
+        "title": "Vrednovanje",
         "refreshListLabel": "Refresh list",
-        "notFound": "No Vrednovanjes found"
+        "notFound": "Nije nadjen zapis vrednovanja"
       },
       "detail": {
         "title": "Vrednovanje"
