--- a/src/main/webapp/i18n/sr/prvorangirani.json
+++ b/src/main/webapp/i18n/sr/prvorangirani.json
@@ -2,9 +2,9 @@
   "tenderApp": {
     "prvorangirani": {
       "home": {
-        "title": "Prvorangiranis",
+        "title": "Prvorangirani",
         "refreshListLabel": "Refresh list",
-        "notFound": "No Prvorangiranis found"
+        "notFound": "ije nadjen zapis Prvorangirani"
       },
       "detail": {
         "title": "Prvorangirani"
