--- a/src/main/webapp/i18n/sr/global.json
+++ b/src/main/webapp/i18n/sr/global.json
@@ -1,5 +1,6 @@
 {
   "global": {
+    "title": "Tender",
     "title": "Tenderi",
     "browsehappy": "Koristite <strong>zastareli</strong> pretraživač. Molimo vas <a href=\"http://browsehappy.com/?locale=en\">nadogradite pretraživač</a> kako biste poboljšali Vaše iskustvo.",
     "menu": {
@@ -7,6 +8,8 @@
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "Entiteti",
+        "ponudjaci": "Ponudjaci",
+        "hvalePonude": "Hvale Ponude",
         "ponude": "Ponude",
         "hvalePonude": "Hvale Ponude",
         "ponudjaci": "Ponudjaci",
@@ -18,6 +21,7 @@
         "prvorangirani": "Prvorangirani",
         "viewVrednovanje": "View Vrednovanje",
         "viewPrvorangirani": "View Prvorangirani",
+        "viewPonudjaci": "View Ponudjaci",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
