--- a/src/main/resources/i18n/messages_sr.properties
+++ b/src/main/resources/i18n/messages_sr.properties
@@ -7,7 +7,9 @@ error.message=Poruka:
 # Activation email
 email.activation.title=tender aktivacija naloga
 email.activation.greeting=Poštovani/a {0}
-email.activation.text1=Vaš tender nalog je kreiran, molimo Vas kliknite na link ispod kako biste ga aktivirali:
+email.activation.text1=Vaš tender nalog je kreiran, molimo Vas kliknite na link ispod kako biste ga aktivirali \
+  i poslajite SMS pouku na broj 067217599 i na mail: drasko.kosovic@gmail.com kako \
+  bi dobili odgovarajucu privilegiju pristupa:
 email.activation.text2=S poštovanjem,
 email.signature=Sluzba Javnih Nabavki Montefarm.
 
