--- a/src/main/webapp/i18n/sr/postupci.json
+++ b/src/main/webapp/i18n/sr/postupci.json
@@ -3,7 +3,7 @@
     "postupci": {
       "home": {
         "title": "Postupci",
-        "refreshListLabel": "Refresh list",
+        "refreshListLabel": "Učitaj ponovo",
         "createLabel": "Kreiraj novi Postupak",
         "createOrEditLabel": "Kreirajte ili izmenite Postupak",
         "notFound": "Nema postupka"
