--- a/src/main/webapp/i18n/sr/specifikacije.json
+++ b/src/main/webapp/i18n/sr/specifikacije.json
@@ -3,7 +3,7 @@
     "specifikacije": {
       "home": {
         "title": "Specifikacije",
-        "refreshListLabel": "Refresh list",
+        "refreshListLabel": "Učitaj ponovo",
         "createLabel": "Kreiraj novu Specifikaciju",
         "createOrEditLabel": "Kreirajte ili izmenite Specifikacije",
         "notFound": "Nema Specifikacija"
