--- a/src/main/webapp/i18n/sr/user-management.json
+++ b/src/main/webapp/i18n/sr/user-management.json
@@ -2,7 +2,7 @@
   "userManagement": {
     "home": {
       "title": "Korisnici",
-      "refreshListLabel": "Refresh list",
+      "refreshListLabel": "Učitaj ponovo",
       "createLabel": "Kreiraj novog korisnika",
       "createOrEditLabel": "Kreiraj ili izmeni korisnika"
     },
