--- a/src/main/webapp/i18n/sr/vrednovanje.json
+++ b/src/main/webapp/i18n/sr/vrednovanje.json
@@ -3,7 +3,7 @@
     "vrednovanje": {
       "home": {
         "title": "Vrednovanje",
-        "refreshListLabel": "Refresh list",
+        "refreshListLabel": "Učitaj ponovo",
         "notFound": "Nije nadjen zapis vrednovanja"
       },
       "detail": {
