--- a/src/main/webapp/i18n/sr/ponude.json
+++ b/src/main/webapp/i18n/sr/ponude.json
@@ -3,7 +3,7 @@
     "ponude": {
       "home": {
         "title": "Ponudes",
-        "refreshListLabel": "Refresh list",
+        "refreshListLabel": "Učitaj ponovo",
         "createLabel": "Kreiraj novi Ponude",
         "createOrEditLabel": "Kreirajte ili izmenite Ponude",
         "notFound": "No Ponudes found"
