--- a/src/main/webapp/i18n/sr/hvalePonude.json
+++ b/src/main/webapp/i18n/sr/hvalePonude.json
@@ -4,7 +4,7 @@
       "home": {
         "title": "Hvale Ponude",
         "refreshListLabel": "Učitaj ponovo",
-        "notFound": "Nema zapisa"
+        "notFound": "Nema zapisa Ponuda"
       },
       "detail": {
         "title": "Hvale Ponude"
