--- a/src/main/webapp/i18n/sr/ponude.json
+++ b/src/main/webapp/i18n/sr/ponude.json
@@ -6,7 +6,7 @@
         "refreshListLabel": "Učitaj ponovo",
         "createLabel": "Kreiraj novi Ponude",
         "createOrEditLabel": "Kreirajte ili izmenite Ponude",
-        "notFound": "No Ponudes found"
+        "notFound": "Nema zapisa Ponude"
       },
       "created": "Kreiran je novi Ponude pod nazivom {{ param }}",
       "updated": "Ponude pod nazivom {{ param }} je ažuriran",
